<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>dev.maynestream.ledgify</groupId>
    <artifactId>ledgify-parent-pom</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <licenses />
    <developers />

    <scm>
        <url>https://github.com/maynestream-dev/ledgify</url>
    </scm>

    <properties>
        <grpc-java.version>3.1.0.RELEASE</grpc-java.version>
        <grpc.version>1.63.0</grpc.version>
        <grpc-test.version>1.2.2</grpc-test.version>
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <protovalidate.version>0.2.1</protovalidate.version>

        <!-- build -->
        <java.version>21</java.version>
        <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- gRPC support -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>net.devh</groupId>
                <artifactId>grpc-client-spring-boot-starter</artifactId>
                <version>${grpc-java.version}</version>
            </dependency>
            <dependency>
                <groupId>net.devh</groupId>
                <artifactId>grpc-server-spring-boot-starter</artifactId>
                <version>${grpc-java.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax.annotation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>build.buf</groupId>
                <artifactId>protovalidate</artifactId>
                <version>${protovalidate.version}</version>
            </dependency>

            <!-- 3rd-party -->

            <!-- test -->
            <dependency>
                <groupId>com.asarkar.grpc</groupId>
                <artifactId>grpc-test</artifactId>
                <version>${grpc-test.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>${os-maven-plugin.version}</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <!-- prevents warnings - `-proc:only`: Explicitly enable annotation processing. -->
                    <compilerArgument>-proc:full</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <!-- prevents warnings in test startup logs due to dynamic loading javaagent -->
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>